refactor: cors configuration source